read file in as chunks

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
         "uncompress" : true
     },
     "uploader" : {
-        "parser" : "parser:load_annotations",
+        "parser" : "parser:load_json",
         "on_duplicates" : "error"
     }
 }
